# flow

./: CMakeLists.txt  bruteForce.cpp  bruteForce.h  dataLoader.cpp  dataLoader.h  generateData.cpp  generateData.h  greedyScheduling.cpp  greedyScheduling.h  main.cpp  mainGenerateData.cpp  saveResults.cpp  saveResults.h  schedule.cpp  schedule.h  simulatedAnnealing.cpp  simulatedAnnealing.h  task.h
